--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -8,13 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.6",
     "framer-motion": "^5.5.5",
     "next": "12.0.7",
     "next-auth": "^4.0.6",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
