--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
-__pycache__
+# Python
+__pycache__/
+*.pyc
+*.pyo
+.venv
+
+# Environment
+env/
+
+# Docker
+*.dockerignore
+
+# Kubernetes
+*.yaml
