--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "axios": "^1.7.6",
+    "date-fns-tz": "^3.1.3",
     "framer-motion": "^5.5.5",
     "next": "12.0.7",
     "next-auth": "^4.0.6",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
+    "react-router-dom": "^6.26.1",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
