--- a/service.yaml
+++ b/service.yaml
@@ -11,3 +11,21 @@ spec:
       port: 80
       targetPort: 5000
       nodePort: 30000
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: rabbitmq
+spec:
+  type: LoadBalancer
+  ports:
+  - name: amqp
+    port: 5672
+    targetPort: 5672
+  - name: management
+    port: 15672
+    targetPort: 15672
+  selector:
+    app: rabbitmq
